# FindlyWeb

./: .gitignore  .prettierrc  README.md  app.js  app.py  architecture  config.cfg  index.html  package-lock.json  package.json  pyproject.toml  run.py  style.css  test.css  test.js
backend/: .gitignore  app.py
backend/get_products_data/: output_of_results.py
backend/get_products_data/collecting_primary_data/: get_21vek_data.py  get_kufar_data.py  get_mmg_data.py  get_onliner_data.py  product_models.py
backend/middleware/: reject_middlware.py
backend/secret_data/: config.toml
backend/templates/: notfound_page.html  unauthorized_page.html  unprocessable_content_page.html
frontend/: .prettierrc  index.html  package-lock.json  package.json
frontend/src/app/: main.tsx
get_pars-data_func/: get_21vek_data.py  get_kufar_data.py  get_onliner_data.py
get_products_data/get_pars_data/: get_21vek_data.py  get_kufar_data.py  get_mmg_data.py  get_onliner_data.py
public/: index.html
secret_data/: config.ini  config.toml
src/: App.css  App.js  App.jsx  app-modular.js  app.js  index.html  index.js  style.css
src/api/: searchService.js
src/app/: main.tsx
src/components/: Results.js  SearchBar.js
src/context/: SettingsContext.js  ThemeContext.js  ToastContext.js
src/hooks/: useLocalStorage.js
src/modules/: core.js  search.js  storage.js  theme.js  ui.js  validation.js
static/: base.css
static/css/: base.css
static/js/: base.js
templates/: base.html  search.html
utils/get_pars_config/: get_21vek_pars_config.py  get_kufar_pars_config.py  get_mmg_pars_config.py  get_onliner_pars_config.py
(+101 files in other folders)
